refactor: routes are updated
