# backend/docs/swagger.json
@@ -57,6 +57,64 @@
                 }
             }
         },
+        "/tasks/filtered": {
+            "get": {
+                "description": "get filtered tasks",
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Get Filtered Tasks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "createdBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "endDate",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "groupID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "startDate",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "taskStatus",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "taskType",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Task"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/tasks/{tid}/assignees": {
             "post": {
                 "description": "assign users to task",
@@ -64,6 +122,24 @@
                     "tasks"
                 ],
                 "summary": "Assign Users To Task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Task ID to assign users to",
+                        "name": "tid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Users to assign to task and assignee",
+                        "name": "_",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/tasks.Assignment"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -72,6 +148,12 @@
                             "items": {
                                 "$ref": "#/definitions/models.TaskUser"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -84,6 +166,24 @@
                     "tasks"
                 ],
                 "summary": "Remove Users From Task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Task ID to remove users from",
+                        "name": "tid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Users to remove from task",
+                        "name": "_",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/tasks.Removal"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -92,6 +192,12 @@
                             "items": {
                                 "$ref": "#/definitions/models.TaskUser"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -136,6 +242,51 @@
                 }
             }
         },
+        "models.Task": {
+            "type": "object",
+            "properties": {
+                "created_by": {
+                    "description": "User ID",
+                    "type": "string"
+                },
+                "created_date": {
+                    "type": "string"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "group_id": {
+                    "type": "integer"
+                },
+                "notes": {
+                    "type": "string"
+                },
+                "repeating": {
+                    "type": "boolean"
+                },
+                "repeating_end_date": {
+                    "type": "string"
+                },
+                "repeating_interval": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "task_id": {
+                    "type": "integer"
+                },
+                "task_info": {
+                    "type": "string"
+                },
+                "task_status": {
+                    "type": "string"
+                },
+                "task_type": {
+                    "type": "string"
+                }
+            }
+        },
         "models.TaskUser": {
             "type": "object",
             "properties": {
@@ -144,6 +295,31 @@
                 },
                 "userID": {
                     "type": "string"
+                }
+            }
+        },
+        "tasks.Assignment": {
+            "type": "object",
+            "properties": {
+                "assigner": {
+                    "type": "string"
+                },
+                "userIDs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "tasks.Removal": {
+            "type": "object",
+            "properties": {
+                "userIDs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
